@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-26T16:08:22Z",
+  "timestamp" : "2023-07-27T08:08:57Z",
   "count_outdated" : 1325,
   "uniques_outdated" : 322,
-  "count" : 1377,
-  "uniques" : 332,
+  "count" : 1379,
+  "uniques" : 333,
   "views" : [
     {
       "timestamp": "2023-07-13T00:00:00Z",
@@ -76,6 +76,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-07-27T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
