@@ -1,6 +1,6 @@
 {
-  "count": 52,
-  "uniques": 10,
+  "count": 54,
+  "uniques": 11,
   "views": [
     {
       "timestamp": "2023-07-13T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2023-07-26T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-07-27T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
