@@ -1,3 +1,12 @@
+2023-07-27T08:08:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5678111520 # 1762
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-27
+* notice: last 14d: unq all: 11 54
+* notice: prev accum: outdated-unq outdated-all / unq all: 322 1325 / 332 1377
+* notice: next accum: outdated-unq outdated-all / unq all: 322 1325 / 333 1379
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-07-27]
+
 2023-07-26T16:08:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5671121105 # 1760
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-26
